python/testData/pyi/inspections/pyiTopLevelUnresolvedForwardReferencesInAnnotations/PyiTopLevelUnresolvedForwardReferencesInAnnotations.pyi
def f(x: C) -> C: ...

D = <error descr="Unresolved reference 'C'">C</error>

class C: ...

E = C
